--- a/Graphic-Design-Illustration.html
+++ b/Graphic-Design-Illustration.html
@@ -803,23 +803,18 @@ color: #ffffff;
               <!-- Left side content -->
               
                   <h5 class="title-left">
-                    Get in Touch
-                  </h5>
-                </div>
-                <br>
-                <div class="more-info">
-                  <p class="lead">
-                    I'm excited to connect with you and discuss potential collaborations, projects, or any inquiries you may have. Whether you're interested in my work or have a creative idea in mind, I'd love to hear from you. Feel free to reach out through the contact form or directly via email, and I'll get back to you as soon as possible. Let's bring your vision to life together.
-                  </p>
-                  <ul class="list-ico">
-                    <li><span class="bi bi-geo-alt"></span> MANILA, METRO MANILA</li>
-                    <li><span class="bi bi-phone"></span> (63) 94788 99520</li>
-                    <li><span class="bi bi-envelope"></span> AMPONHAZEL@GMAIL.COM</li>
-                  </ul>
-                  <br>
-                  <p class="lead">
-                    Do you need a video editor? I highly recommend my partner, my luv! <a href="https://ztgello.github.io/PORTFOLIO/" class="gsus-link">GSUS</a>  
-                  </p>
+                   Get in Touch
+                      </h5>
+                    </div>
+                    <div class="more-info">
+                      <p class="lead">
+                        I'm excited to connect with you and discuss potential collaborations, projects, or any inquiries you may have. Whether you're interested in my work or have a creative idea in mind, I'd love to hear from you. Feel free to reach out directly via email, and I'll get back to you as soon as possible. Let's bring your vision to life together.
+                      </p>
+                      <ul class="list-ico">
+                        <li><span class="bi bi-geo-alt"></span> MANILA, METRO MANILA</li>
+                        <li><span class="bi bi-phone"></span> (63) 94788 99520</li>
+                        <li><span class="bi bi-envelope"></span> AMPONHAZEL@GMAIL.COM</li>
+                      </ul>
 
                 </div>
               </div>
