--- a/index.html
+++ b/index.html
@@ -230,58 +230,36 @@ Please watch the video below to know more about me. I look forward to working wi
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(https://i.pinimg.com/originals/c3/e9/a5/c3e9a5cac7ba472c10609f5c4c411389.gif)">
-      <div class="overlay-mf"></div>
-      <div class="container position-relative">
-        <div class="row">
-          <div class="col-sm-3 col-lg-3">
-            <div class="counter-box counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-check"></i></span>
-              </div>
-              <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">WORKS COMPLETED</span>
-              </div>
-            </div>
+   <!-- ======= Counter Section ======= -->
+<div class="section-counter paralax-mf bg-image" style="background-image: url(https://i.pinimg.com/originals/c3/e9/a5/c3e9a5cac7ba472c10609f5c4c411389.gif)">
+  <div class="overlay-mf"></div>
+  <div class="container position-relative">
+    <div class="row justify-content-center">
+      <div class="col-sm-3 col-lg-3">
+        <div class="counter-box pt-4 pt-md-0">
+          <div class="counter-ico">
+            <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
           </div>
-          <div class="col-sm-3 col-lg-3">
-            <div class="counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
-              </div>
-              <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">YEARS OF COLLEGE EXPERIENCE</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-lg-3">
-            <div class="counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-people"></i></span>
-              </div>
-              <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">ART COLLECTIONS</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-lg-3">
-            <div class="counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-award"></i></span>
-              </div>
-              <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">AWARDS WON</span>
-              </div>
-            </div>
+          <div class="counter-num">
+            <p data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="counter purecounter"></p>
+            <span class="counter-text">YEARS OF COLLEGE EXPERIENCE</span>
           </div>
         </div>
       </div>
-    </div><!-- End Counter Section -->
+      <div class="col-sm-3 col-lg-3">
+        <div class="counter-box pt-4 pt-md-0">
+          <div class="counter-ico">
+            <span class="ico-circle"><i class="bi bi-award"></i></span>
+          </div>
+          <div class="counter-num">
+            <p data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="counter purecounter"></p>
+            <span class="counter-text">AWARDS WON</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- End Counter Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
